# sqlite-rs

./: .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
.cargo/: config.toml
.devcontainer/: devcontainer.json  install_tooling.sh
examples/: dump.rs  sqlite_info.rs
src/: lib.rs  log_macros.rs  macros.rs  main.rs  result.rs  traits.rs
src/btree/: first_freeblock.rs  mod.rs  number_of_cells.rs  page_type.rs
src/btree/header/: first_freeblock.rs  mod.rs  number_of_cells.rs  page_type.rs
src/btree/pager/: common.rs  mod.rs  no_std.rs  std.rs
src/btree/pager/no_std/: mod.rs
src/btree/pager/std/: mod.rs
src/header/: application_id.rs  database_text_encoding.rs  db_filesize_in_pages.rs  file_change_counter.rs  file_format_version_numbers.rs  freelist_pages.rs  incremental_vacuum_settings.rs  magic_header_string.rs  mod.rs  page_size.rs  payload_fractions.rs  reserved_bytes_per_page.rs  reserved_for_expansion.rs  schema_cookie.rs  schema_format.rs  suggested_cache_size.rs  traits.rs  user_version.rs  version_valid_for.rs  write_library_version.rs
src/io/: mod.rs
src/io/btree/header/: number_of_cells.rs
src/io/btree/pager/: common.rs  mod.rs
src/io/btree/pager/no_std/: mod.rs
src/io/header/: application_id.rs  database_text_encoding.rs  file_change_counter.rs  freelist_pages.rs  magic_header_string.rs  mod.rs  page_size.rs  reserved_bytes_per_page.rs  suggested_cache_size.rs  write_library_version.rs
src/pager/: mod.rs  page.rs
src/pager/btree/: header_fields.rs  mod.rs  page_type.rs
src/pager/btree/cell/: mod.rs
src/pager/btree/page/: header.rs  interior.rs  leaf.rs  mod.rs
src/runtime/: mod.rs
src/runtime/operations/: mod.rs  show_tables.rs
src/sql/: keywords.rs
src/sqlite_cli/: mod.rs  result.rs
src/sqlite_cli/cli/: mod.rs
src/sqlite_cli/repl/: dbinfo.rs  help.rs  mod.rs  open.rs  sql.rs
src/storage/: mod.rs
src/storage/btree/header/: first_freeblock.rs  mod.rs  page_type.rs
src/storage/btree/pager/std/: mod.rs
src/storage/header/: db_filesize_in_pages.rs  file_format_version_numbers.rs  payload_fractions.rs  schema_cookie.rs  version_valid_for.rs
src/tests/: flights_db.rs  helpers.rs  mod.rs
tests/: helpers.rs  no_std.rs
tests/embedded/: mod.rs
