[package]
edition = "2021"
rust-version = "1.74.1"
name = "sqlite-rs"
version = "0.2.0"
description = "SQLite reader in pure Rust"
authors = ["[Antonio Costa - afsec](https://github.com/afsec)"]
repository = "https://github.com/afsec/sqlite-rs"
license = "MIT"
readme = "README.md"
keywords = ["sqlite", "database"]

[features]
default = ["log"]
log = []
# log = ["dep:log"]

[dependencies]
# env_logger = "0.10.1"
# log = { version = "0.4.20", optional = true }


[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true

[profile.test]
opt-level = 0
lto = false
debug = true
debug-assertions = true

[profile.bench]
opt-level = 3
lto = true
debug = false
debug-assertions = false

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
strip = true
