[package]
edition = "2021"
rust-version = "1.74.1"
name = "sqlite-rs"
version = "0.3.4"
description = "SQLite reader in pure Rust"
authors = ["[Antonio Costa - afsec](https://github.com/afsec)"]
repository = "https://github.com/afsec/sqlite-rs"
license = "MIT"
readme = "README.md"
keywords = ["sqlite", "database"]


[features]
default = ["log"]
log = []


[dependencies]


[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true

[profile.test]
opt-level = 0
lto = false
debug = true
debug-assertions = true

[profile.bench]
opt-level = 3
lto = true
debug = false
debug-assertions = false

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
strip = true
