[package]
edition = "2021"
rust-version = "1.74.1"
name = "sqlite-rs"
version = "0.3.7"
description = "SQLite reader in pure Rust"
authors = ["[Antonio Costa - afsec](https://github.com/afsec)"]
repository = "https://github.com/afsec/sqlite-rs"
license = "MIT"
readme = "README.md"
keywords = ["sqlite", "database"]


[badges]
maintenance = { status = "actively-developed" }


[features]
default = ["log"]
log = []


[dependencies]


[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true

[profile.test]
opt-level = 0
lto = false
debug = true
debug-assertions = true

[profile.bench]
opt-level = 3
lto = true
debug = false
debug-assertions = false

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
strip = true

[lints.rust]
unsafe_code = "forbid"
non_ascii_idents = "forbid"

[lints.clippy]
enum_glob_use = "deny"
unreachable_pub = "deny"
private_interfaces = "deny"
missing_debug_implementations="warn"
rust_2018_idioms = "warn"
future_incompatible = "warn"
nonstandard_style = "warn"
# missing_docs = "warn"
all = "warn"
dbg_macro = "warn"
type_complexity = "warn"
todo = "warn"
empty_enum = "warn"
mem_forget = "warn"
unused_self = "warn"
filter_map_next = "warn"
needless_continue = "warn"
needless_borrow = "warn"
match_wildcard_for_single_variants = "warn"
if_let_mutex = "warn"
mismatched_target_os = "warn"
await_holding_lock = "warn"
match_on_vec_items = "warn"
imprecise_flops = "warn"
suboptimal_flops = "warn"
lossy_float_literal = "warn"
rest_pat_in_fully_bound_structs = "warn"
fn_params_excessive_bools = "warn"
exit = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
option_option = "warn"
verbose_file_reads = "warn"
unnested_or_patterns = "warn"
str_to_string = "warn"

